Fixed cropped contact card

--- a/resume/components/contact.css
+++ b/resume/components/contact.css
@@ -45,7 +45,7 @@
 
 .card-container {
 	display: block;
-	height: calc(100vh - 100px);
+	height: calc(100vh - 60px);
 	position: relative;
 }
 
